<?xml version="1.0"?>
<package format="2">
  <name>ros_odrive</name>
  <version>0.0.1</version>
  <description>The ros_odrive C++ driver package</description>
  <maintainer email="ioko@ioko.eu">Ioannis Kokkoris</maintainer>
  <license>MIT</license>
  <url type="website">http://www.ioko.eu/</url>
  <author email="ioko@ioko.eu">Ioannis Kokkoris</author>

  <build_depend>message_generation</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>

  </export>
</package>
